tree-sitter-ilk/test/corpus/ilk_basics.txt
================================================================================
Base types
================================================================================

meta A = *
meta B = Uuid
meta C = String
meta D = Int

--------------------------------------------------------------------------------

(source_file
  (meta_decl (identifier) (base_type))
  (meta_decl (identifier) (base_type))
  (meta_decl (identifier) (base_type))
  (meta_decl (identifier) (base_type)))

================================================================================
Struct types
================================================================================

meta Empty = {}
meta Open = {...}
meta Anonymous = {_}
meta AnonymousTyped = {_ String}
meta Named = {x Int}

--------------------------------------------------------------------------------

(source_file
  (meta_decl (identifier) (struct_type))
  (meta_decl (identifier) (struct_type))
  (meta_decl (identifier) (struct_type (anonymous_fields (anonymous_field))))
  (meta_decl (identifier) (struct_type (anonymous_fields (anonymous_field (base_type)))))
  (meta_decl (identifier) (struct_type (field_list (field (identifier) (base_type))))))

================================================================================
List types
================================================================================

meta Items = []Event
meta Exact = [3]Tag
meta AtLeast = [1..]Tag
meta Range = [2..5]Tag

--------------------------------------------------------------------------------

(source_file
  (meta_decl (identifier) (list_type (named_type (identifier))))
  (meta_decl (identifier) (list_type (cardinality (number)) (named_type (identifier))))
  (meta_decl (identifier) (list_type (cardinality (number)) (named_type (identifier))))
  (meta_decl (identifier) (list_type (cardinality (number) (number)) (named_type (identifier)))))

================================================================================
Union types
================================================================================

meta Status = Pending | Active | Archived
meta Method = "GET" | "POST"

--------------------------------------------------------------------------------

(source_file
  (meta_decl (identifier) (union_type (union_type (named_type (identifier)) (named_type (identifier))) (named_type (identifier))))
  (meta_decl (identifier) (union_type (literal_type (string)) (literal_type (string)))))

================================================================================
Intersection types
================================================================================

meta Event = {...} & {timestamp Int}

--------------------------------------------------------------------------------

(source_file
  (meta_decl (identifier) (intersection_type (struct_type) (struct_type (field_list (field (identifier) (base_type)))))))

================================================================================
Reference types
================================================================================

meta Ref = &Event

--------------------------------------------------------------------------------

(source_file
  (meta_decl (identifier) (reference_type (identifier))))

================================================================================
Refinable ref types
================================================================================

meta Scenario = []-Event

--------------------------------------------------------------------------------

(source_file
  (meta_decl (identifier) (list_type (refinable_ref (identifier)))))

================================================================================
Concrete types
================================================================================

meta Label = Concrete<String>
meta Version = Concrete<Int>

--------------------------------------------------------------------------------

(source_file
  (meta_decl (identifier) (concrete_type (base_type)))
  (meta_decl (identifier) (concrete_type (base_type))))

================================================================================
Annotations - source
================================================================================

meta Command = {
    fields {...},
    @source [fields]
    emits []Event
}

--------------------------------------------------------------------------------

(source_file
  (meta_decl (identifier) (struct_type (field_list
    (field (identifier) (struct_type))
    (field (annotation (source_args (source_path (identifier)))) (identifier) (list_type (named_type (identifier))))))))

================================================================================
Comments
================================================================================

// This is a comment
meta A = String // inline

--------------------------------------------------------------------------------

(source_file
  (comment)
  (meta_decl (identifier) (base_type))
  (comment))

================================================================================
Typed list values (instances)
================================================================================

x = Event {
  tags []String
  scores [2..5]Int
}

--------------------------------------------------------------------------------

(source_file
  (instance
    name: (identifier)
    type: (identifier)
    value: (struct_value
      (value_field_list
        (value_field
          name: (identifier)
          value: (list_type_value (type_ref (base_type))))
        (value_field
          name: (identifier)
          value: (list_type_value
            (cardinality (number) (number))
            (type_ref (base_type))))))))
